<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:maxHeight="250dp">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="16dp">

        <TextView
                android:id="@+id/list_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingLeft="16dp"
                android:text="@string/title"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/list_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingLeft="16dp"
                android:text="@string/year"/>

        <TextView
                android:id="@+id/list_omdbid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingLeft="16dp"
                android:visibility="gone"
                android:text="@string/omdbid"/>

        <TextView
                android:id="@+id/list_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingLeft="16dp"
                android:text="@string/type"/>

        <ImageView
                android:id="@+id/list_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingLeft="16dp"/>
    </LinearLayout>
</android.support.v7.widget.CardView>